fix(trailhead): Left align Fx family services on mobile
fixes #1214

--- a/packages/fxa-content-server/app/styles/modules/_marketing.scss
+++ b/packages/fxa-content-server/app/styles/modules/_marketing.scss
@@ -34,6 +34,15 @@
   > h2 {
     font-size: 18px;
     margin-top: 0;
+
+    @include respond-to('small') {
+      html[dir='ltr'] & {
+        text-align: left;
+      }
+      html[dir='rtl'] & {
+        text-align: right;
+      }
+    }
   }
 
   > ul {
@@ -45,19 +54,16 @@
       grid-template-columns: repeat(2, 1fr);
     }
 
-    @include respond-to('small') {
-      margin: auto;
-      text-align: center;
-    }
-
     > .firefox-service {
       color: $grey-50;
       font-size: 11.5px;
       line-height: 1.7em;
       padding: 0 10px 20px 0;
-
-      @include respond-to('big') {
+      html[dir='ltr'] & {
         text-align: left;
+      }
+      html[dir='rtl'] & {
+        text-align: right;
       }
 
       .logo {
@@ -65,16 +71,9 @@
         background-repeat: no-repeat;
         display: block;
         height: 40px;
+        margin: 0;
         text-indent: -9999px;
         width: 180px;
-
-        @include respond-to('big') {
-          margin: 0;
-        }
-
-        @include respond-to('small') {
-          margin: 0 auto;
-        }
 
         &.logo-firefox-browser {
           background-image: image-url('trailhead/graphic-logo-firefox.svg');
